fix(Button): align for `size=l`

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -538,10 +538,6 @@
   margin-left: 8px;
 }
 
-.Button--size-l .Button__in {
-  justify-content: center;
-}
-
 .Button:not(.Button--size-s) .Button__content {
   transform: translateY(-1px);
 }
